// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon-size prop 1`] = `
<div class="ghb-grid ghb-hairline--top">
  <div class="ghb-grid-item" style="flex-basis: 25%;">
    <div class="ghb-grid-item__content ghb-grid-item__content--center ghb-hairline"><i class="ghb-icon ghb-icon-success ghb-grid-item__icon" style="font-size: 10px;">
        <!----></i></div>
  </div>
</div>
`;

exports[`render icon-slot 1`] = `
<div class="ghb-grid ghb-hairline--top">
  <div class="ghb-grid-item" style="flex-basis: 25%;">
    <div class="ghb-grid-item__content ghb-grid-item__content--center ghb-hairline">
      <div class="ghb-grid-item__icon-wrapper">
        <div>Custom Icon</div>
        <div class="ghb-info">1</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`square and set gutter 1`] = `
<div class="ghb-grid" style="padding-left: 10rem;">
  <div class="ghb-grid-item ghb-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="ghb-grid-item__content ghb-grid-item__content--center ghb-grid-item__content--square ghb-grid-item__content--surround ghb-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="ghb-grid-item ghb-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="ghb-grid-item__content ghb-grid-item__content--center ghb-grid-item__content--square ghb-grid-item__content--surround ghb-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="ghb-grid-item ghb-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="ghb-grid-item__content ghb-grid-item__content--center ghb-grid-item__content--square ghb-grid-item__content--surround ghb-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
</div>
`;
